# mfma

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
01-hello-hip/: README.md  hello_hip.cpp  hello_hip_optimised.cpp
02-wavefront-basics/: README.md  wavefront_basics.cpp
03-lds-memory/: README.md  lds_memory  lds_memory.cpp
04-mfma-intro/: mfma_intro.cpp
05-mfma-gemm/: mfma_gemm.cpp
06-xcd-awareness/: Makefile  README.md  xcd_discovery.cpp
06-xcd-awareness/06a-xcd-discovery/: Makefile  README.md  xcd_discovery.cpp
06-xcd-awareness/06b-swizzled-gemm/: Makefile  README.md  swizzled_gemm.cpp
06-xcd-awareness/06c-profiling/: Makefile  README.md  l2_profiling.cpp
HIP_basic/assembly_to_executable/: CMakeLists.txt  README.md  main  main.hip  main.s
asm-experiments/: Makefile  README.md  host_loader.hpp  verify_asm_env.sh
asm-experiments/asm-01-hello-asm/: Makefile  README.md  hello_asm.co  hello_asm.s  host.cpp  runner
asm-experiments/common/: host_loader.hpp
basic/: example_utils.hpp  main  main.hip  main.s
basic/Common/: example_utils.hpp
